# discordlite

./: .gitignore  CMakeLists.txt  README.md
src/: deserializable.h  deserializer.cpp  deserializer.h  gateway_events.h  library.h  opcodes.h  opcodes_hash.cpp  opcodes_hash.h  opcodes_utilities.h  serializable.h  websocket_client.cpp  websocket_client.h
src/client/: client_state.h  discord_client.cpp  discord_client.h  discord_client.hpp  discord_client_state.cpp  discord_client_state.h  message.cpp  message.h  websocket_client.cpp  websocket_client.h  websocket_client.hpp  websocket_message.cpp  websocket_message.h
src/http-client/: get_gateway_bot_api.h  ping_slash_command.h  register_slash_command.h  send_message.h
src/models/: dispatch_event.h  gateway-event-payload.h  gateway-event.h  gateway_bot.h  gateway_event.cpp  gateway_event.h  gateway_event_payload.h  hello-event.h  hello_event.h  identify-event.h  identify_event.h  properties.h  session_start_limit.h
src/protocol/: deserializable.h  deserializer.cpp  deserializer.h  discord_intents.cpp  discord_intents.h  dispatcher.cpp  dispatcher.h  event_dispatcher.cpp  event_dispatcher.h  heartbeat.h  message.cpp  message.h  opcodes.cpp  opcodes.h  opcodes_utilities.cpp  opcodes_utilities.h  ping.h  serializable.h
src/protocol/events/: author.h  dispatch_event.cpp  dispatch_event.h  gateway_event.h  hello_event.cpp  hello_event.h  identify_event.h  properties.h  ready_event.h
src/protocol/handlers/: dispatch_handler.cpp  dispatch_handler.h  event_handler.cpp  event_handler.h  handler.cpp  handler.h  hello_handler.cpp  hello_handler.h
src/protocol/handlers/dispatch/: interaction_create_handler.cpp  interaction_create_handler.h  message_create_handler.cpp  message_create_handler.h  ready_handler.cpp  ready_handler.h
src/utilities/: json_utils.cpp  json_utils.h  protocol_url_generator.cpp  protocol_url_generator.h
test-bot/: CMakeLists.txt  main.cpp
